--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "license": "UNLICENSED",
     "private": true,
     "devDependencies": {
+        "css-loader": "^6.3.0",
+        "html-webpack-plugin": "^5.3.2",
+        "mini-css-extract-plugin": "^2.3.0",
+        "style-loader": "^3.3.0",
         "webpack": "^5.54.0",
         "webpack-cli": "^4.8.0"
-    }
+    },
+    "dependencies": {}
 }
