--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "UNLICENSED",
     "private": true,
     "devDependencies": {
+        "clean-webpack-plugin": "^4.0.0",
         "css-loader": "^6.3.0",
         "html-webpack-plugin": "^5.3.2",
         "mini-css-extract-plugin": "^2.3.0",
